--- a/styles/homeStyle.css
+++ b/styles/homeStyle.css
@@ -4,8 +4,6 @@
   background: #000;
 }
 #myBanner {
-  left: 50%;
-  transform: translateX(-50%);
   position: absolute;
   height: 112vh;
   width: 100%;
@@ -19,10 +17,10 @@
   height: 112vh;
   background: rgba(0, 0, 0, 0.5);
   color: #fff;
+  text-align: center;
 }
-.banner-content {
-  width: 50%;
-  padding-left: 0;
+.banner-content p {
+  text-align: center;
 }
 /* testinomials */
 .testimonial-card {
@@ -109,7 +107,10 @@
   gap: 50px;
   padding-bottom: 5px;
 }
-.social svg,
-a {
+.social i {
+  color: #1b5e3a;
+}
+.social i:hover {
+  color: #fff;
   cursor: pointer;
 }
