--- a/styles/aboutUsStyle.css
+++ b/styles/aboutUsStyle.css
@@ -33,7 +33,7 @@
   content: "";
   position: absolute;
   width: 6px;
-  background-color: #00ff6a;
+  background-color: #fff;
   top: 0;
   bottom: 0;
   left: 50%;
@@ -53,7 +53,7 @@
   width: 25px;
   height: 25px;
   right: -17px;
-  background-color: #00ff6a;
+  background-color: #acf2b1;
   border: 4px solid #1b5e3a;
   top: 15px;
   border-radius: 50%;
@@ -79,7 +79,7 @@
   right: 30px;
   border: medium solid #1b5e3a;
   border-width: 10px 0 10px 10px;
-  border-color: transparent transparent transparent #00ff6a;
+  border-color: transparent transparent transparent #fff;
 }
 /* Add arrows to the right container (pointing left) */
 .right::before {
@@ -92,7 +92,7 @@
   left: 30px;
   border: medium solid #1b5e3a;
   border-width: 10px 10px 10px 0;
-  border-color: transparent #00ff6a transparent transparent;
+  border-color: transparent #fafafa transparent transparent;
 }
 /* Fix the circle for containers on the right side */
 .right::after {
@@ -106,7 +106,7 @@
 /* The actual content */
 .timeline-content {
   padding: 20px 30px;
-  background-color: #00ff6a;
+  background-color: #fff;
   position: relative;
   border-radius: 6px;
 }
@@ -121,7 +121,7 @@
 }
 
 .infographic-item {
-  background: #a8d5ba;
+  background: #acf2b1;
   padding: 20px;
   border-radius: 12px;
 }
