--- a/styles/generalStyles.css
+++ b/styles/generalStyles.css
@@ -35,7 +35,8 @@ pre,
 #technologies,
 #testimonials,
 #mission,
-#services {
+#services,
+#caloriesCalculator {
   background-color: #acf2b1;
   padding: 20px 0;
 }
