--- a/styles/servicesStyle.css
+++ b/styles/servicesStyle.css
@@ -93,9 +93,12 @@
   margin: 0 auto;
 }
 
-.form-control {
-  border-color: transparent;
-  border-radius: 20px 0 0 20px;
+#services .form-control {
+  display: grid;
+  border-radius: 0.5rem;
+  width: 50%;
+  margin-left: 25%;
+  margin-top: 1rem;
 }
 /* Previous styles remain the same */
 .container {
